--- a/Desafio 2/index.html
+++ b/Desafio 2/index.html
@@ -31,8 +31,10 @@
 
         <section class="content">
 
-            <span>Destaques</span>
-            <p>Frete grátis e chinelo de brinde é aqui, aproveite por tempo limitado. </p>
+            <div class="contentText">
+                <span>Destaques</span>
+                <p>Frete grátis e chinelo de brinde é aqui, aproveite por tempo limitado. </p>
+            </div>
 
             <div class="produtos">
                 <div class="produto"><img src="/assets/image/1.png" alt="" class="tenis"></div>
